[package]
name = "cursor_reqs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bon = "3.6.3"
chrono = "0.4.41"
colored = "3.0.0"
derive_more = { version = "2.0.1", features = ["full"] }
dotenv = "0.15.0"
env-logger-wrapper = "0.1.1"
itertools = "0.14.0"
parking_lot = { version = "0.12.3", features = ["nightly"] }
reqwest = "0.12.15"
strum = "0.27.1"
strum_macros = "0.27.1"
tap = "1.0.1"
tokio = { version = "1.45.0", features = ["full"] }
validator = "0.20.0"
variantly = "0.4.0"
