[package]
name = "cursor_reqs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
colored = "3.0.0"
dotenvy = "0.15.7"
nestruct = "0.1.0"
parking_lot = { version = "0.12.3", features = ["nightly"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tap = "1.0.1"
# thin-logger = "0.1.1"
thin-logger = { path = "/Users/ale/Documents/thin-logger" }
tokio = { version = "1.45.0", features = ["full"] }
